--- a/mutants/src/main/resources/application.properties
+++ b/mutants/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.password=iotdans
 spring.data.mongodb.port=27017
 spring.data.mongodb.repositories.enabled=true
-spring.data.mongodb.uri=mongodb://devuser:iotdans@localhost:27017/
+spring.data.mongodb.uri=mongodb://devuser:iotdans@mongodb:27017/
 spring.data.mongodb.username=devuser
 
 # Los JOBs de Spring Batch no se ejecutan al arrancar Sprint
