--- a/mutants/src/main/resources/application.properties
+++ b/mutants/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSou
 # Parametros de coneccion BD Mongo.
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.database=mutants
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=mongodb
 spring.data.mongodb.password=iotdans
 spring.data.mongodb.port=27017
 spring.data.mongodb.repositories.enabled=true
